ingress-controller/vote-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vote-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - "vote.b14facebook.xyz"
    - "www.b14facebook.xyz"
    secretName: wc-tls-secret
  rules:
  - host: vote.b14facebook.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vote-service
            port:
              number: 80
  - host: www.b14facebook.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vote-service
            port:
              number: 80
